<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000"
    tools:context=".DogalizeSignupActivity" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_landing_page"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/screen_padding"
        android:paddingRight="@dimen/screen_padding"
        android:paddingTop="@dimen/layout_padding" >

        <EditText
            android:id="@+id/signup_email"
            style="@style/card_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_card"
            android:hint="@string/email"
            android:inputType="textEmailAddress" 
            />

        <EditText
            android:id="@+id/signup_password"
            style="@style/card_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/verfiy_password"
            style="@style/card_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/screen_padding"
            android:hint="@string/verifypassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_background"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/signup"
            android:padding="8dp"
            android:textColor="@android:color/white" />
    </LinearLayout>


    
    <Button
     	android:layout_marginLeft="@dimen/screen_padding"
    	android:layout_marginRight="@dimen/screen_padding"
     	android:layout_marginBottom="16dp"
        android:id="@+id/fb_sign_up"
        android:background="@drawable/facebook_login_button_background"
        android:textColor="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_alignParentBottom="true"
        android:text="@string/fb_sign_up" />

</RelativeLayout>