<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
 	android:background="#66000000"
    >
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
         android:src="@drawable/bg_landing_page"
        />
    
<LinearLayout 
     android:paddingTop="@dimen/layout_padding" 
    android:paddingLeft="@dimen/screen_padding"
    android:paddingRight="@dimen/screen_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

		    <EditText
		        style="@style/card_et"
		        android:background="@drawable/bg_card"
		        android:layout_marginBottom="@dimen/activity_horizontal_margin"
		        android:id="@+id/login_email"
		        android:layout_width="fill_parent"
		        android:inputType="textEmailAddress"
		        android:layout_height="wrap_content"
		        android:hint="@string/email" />
    
     
     
    <EditText
        style="@style/card_et"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:id="@+id/login_password"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:hint="@string/password" />
     
     <Button
         
      android:background="@drawable/login_button_background"
        android:id="@+id/login"
         android:textColor="@android:color/white"
         android:gravity="center_horizontal|center_vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/login" />
    
</LinearLayout>
 <Button
     	android:layout_marginLeft="@dimen/screen_padding"
    	android:layout_marginRight="@dimen/screen_padding"
     	android:layout_marginBottom="16dp"
     	android:gravity="center_horizontal|center_vertical"
        android:id="@+id/fblogin"
        android:background="@drawable/facebook_login_button_background"
        android:textColor="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_alignParentBottom="true"
        android:text="@string/fblogin" />

</RelativeLayout>